Hot fix so invisible list doesn't cover input

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,4 +11,5 @@ footer {
 #options {
   position: absolute;
   opacity: 0;
+  z-index: -1;
 }
